# ethglobal_istanbul_2023

./: .gitignore  README.md  pyproject.toml
backend/: main.py  pyproject.toml  try.py
backend/mocks/: user_probas.json
backend/results/arbitrum/: model_scripted.pt  prod_data.json
backend/results/arbitrum/zkml/: network.onnx  proof_data.json  settings.json
backend/results/base/: model_scripted.pt  prod_data.json
backend/results/base/zkml/: settings.json
backend/results/celo/: model_scripted.pt
backend/results/celo/zkml/: cal_data.json  settings.json
backend/results/gnosis/zkml/: proof_data.json  settings.json
backend/results/layer_zero/: model_scripted.pt  prod_data.json
backend/results/optimism/: prod_data.json
backend/results/polygon/: prod_data.json
backend/results/zksync/: model_scripted.pt  prod_data.json
backend/results/zksync/zkml/: input_data.json  proof_data.json  settings.json
backend/routers/: graphs.py  protocols.py  results.py
contracts/: .gitignore  .prettierrc  .solhint.json  hardhat.config.js  package.json
contracts/compiled_contracts/: ZkMLAirdrop.json
contracts/contracts/: zkMLAirdrop.sol
contracts/deployment/: deployzkMlAirdrop.js  verifyZkMLAirdrop.js
frontend/: index.html  package.json
frontend/contracts/: deploy_output.json  deployzkMlAirdrop.js  verifyZkMLAirdrop.js
frontend/src/: contracts.js  (+1 more)
ml_pipeline/: cleaner_script.py  evaluation.py  model.py  pipeline.py  postprocessing.py  preprocessing.py  shap_plots.py  training.py  zkml.py
notebooks/: deploy_verifier.ipynb  feature_eng.ipynb  ml_pipeline.ipynb
(+91 files in other folders)
