[tool.poetry]
name = "ethglobal-istanbul-2023"
version = "0.1.0"
description = "ETHGlobal Istanbul 2023"
authors = ["Miguel Blanco Marcos <miguel.blanco.marcos@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_pipeline"}]


[tool.poetry.dependencies]
python = "<3.13,>=3.9"
requests = "^2.31.0"
py-solc-x = "^2.0.2"
web3 = "^6.11.3"
eth-account = "^0.10.0"
python-decouple = "^3.8"
eth-abi = "^4.2.1"
ipykernel = "^6.26.0"
ezkl = "^4.2.9"
onnx = "^1.15.0"
torch = "^2.1.1"
torchvision = "^0.16.1"
torchaudio = "^2.1.1"
pandas = "^2.1.3"
numpy = "^1.26.2"
scipy = "^1.11.3"
scikit-learn = "^1.3.2"
tqdm = "^4.66.1"
matplotlib = "^3.8.1"
solc-select = "^1.0.4"
sk2torch = "^1.2.0"
shap = "^0.43.0"
ipywidgets = "^8.1.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
