[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Álvaro Calvo García <cokeiv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = "*"
numpy = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
